# dhg

./: .gitignore  README.md  first.py  get_dataset.py  hypergraph.ipynb  main.py  pyproject.toml  test.ipynb
exp/: hgnn.ipynb
exp/图的一些性质/: node2vec.ipynb  test.ipynb
exp/超图降维/: hypergcn.ipynb  star_gcn.ipynb  团扩展.ipynb
ml_tutorial/ch02_base/feature/: 1_variance_filter.ipynb  2_pearson.ipynb  3_spearman.ipynb  4_pca.ipynb
ml_tutorial/feature/: 1_variance_filter.ipynb
myexp/n-reduction-graph/: README.md
myexp/n-reduction-graph/src/: data_reader.py  feature_extractor.py  hyperedge_model.py  main.py  model_trainer.py
myexp/n-reduction-graph/src/Figure_source_data/Figure1_S3/: DAWN.csv  NDC-classes.csv  NDC-substances.csv  dblp.csv  email-Enron.csv  email-Eu.csv  iAF1260b.csv  iAF987.csv  iCN900.csv  nematode_mammal.csv  pubmed.csv  threads-math-sx.csv
myexp/n-reduction-graph/src/Figure_source_data/Figure2_S4/: DAWN.csv  NDC-classes.csv  NDC-substances.csv  dblp.csv  email-Enron.csv  email-Eu.csv  iAF1260b.csv  iAF987.csv  iCN900.csv  nematode_mammal.csv  pubmed.csv  threads-math-sx.csv
myexp/n-reduction-graph/src/Figure_source_data/Figure3_S5_S8_S10_S12/: n-pg_vs_n-rd.xlsx
myexp/n-reduction-graph/src/Figure_source_data/FigureS1/: DAWN_hyperedge_size_distribution.csv  NDC-classes_hyperedge_size_distribution.csv  NDC-substances_hyperedge_size_distribution.csv  dblp_hyperedge_size_distribution.csv  email-Enron_hyperedge_size_distribution.csv  email-Eu_hyperedge_size_distribution.csv  (+6 more)
myexp/n-reduction-graph/src/results_test/: email-Enron.csv
(+72 files in other folders)
